# CPify

./: .gitignore  README.md  build-flatpak.sh  build_status.txt  build_status_2.txt  com.github.dixonsolutions.CPify.yml  compileandrun.sh  cpify-linux-x86_64.flatpak  current_time.txt  main.py  meson.build  requirements.txt  song_data.json
.flatpak-builder/cache/: summary  summary.idx
.flatpak-builder/cache/refs/heads/app/com.github.dixonsolutions.CPify/x86_64/: master
.flatpak-builder/cache/refs/heads/appstream/: x86_64
.flatpak-builder/cache/refs/heads/appstream2/: x86_64
.flatpak-builder/cache/refs/heads/runtime/com.github.dixonsolutions.CPify.Debug/x86_64/: master
.flatpak-builder/cache/refs/heads/x86_64-com.github.dixonsolutions.CPify.yml/: build-cpify  cleanup  finish  init
.flatpak-builder/cache/summaries/: 2198ee5461527eecd352321b13feede784b47ae5bbaa1610cb99e176dd2c6eb8-14c6e918dfaece305da8b5ef16caa33ccf1589672ac5403b47028aa89afeea4b.delta
.flatpak-builder/checksums/: x86_64-com.github.dixonsolutions.CPify.yml
@docs/: packaging.md
cprojectmigrate/: compileandrun.sh  meson.build
cprojectmigrate/docs/: DEV_SETUP.md
cprojectmigrate/src/: main.c  media_scanner.c  media_scanner.h  meson.build  player.c  player.h  pypify_app.c  pypify_app.h  sound_effects.c  sound_effects.h
data/: meson.build
docs/: DEV_SETUP.md  FLATPAK.md  UPDATES.md
flatpak-repo/: summary  summary.idx
flatpak-repo/refs/heads/app/com.github.dixonsolutions.CPify/x86_64/: master
flatpak-repo/refs/heads/appstream/: x86_64
flatpak-repo/refs/heads/appstream2/: x86_64
flatpak-repo/refs/heads/runtime/com.github.dixonsolutions.CPify.Debug/x86_64/: master
flatpak-repo/summaries/: 29850c1d81dd317f219922dfd3d5e1249033c78ae9bb9eb9d3eac4dab6b55511-441d497762404f807d0a335724f47fce01ae096dbe35953b3e502634784aaecd.delta  36ca86d1bc99092d98523920fcbc105158ca3abae28762ffa0bdb8c7a1fb0aff-027f3ee888d2f5e93892df8b07bae4a87744fc56800619d22e60b8e85d8a09e3.delta  575172e8b51d83281782d8ae17276e6435dbb598c05f8fe3b49d856f824bc3ad-7185ed1fdc74f95e3d8731609c50eab93ed4b73cfbf34db8434903c78df1524f.delta  575172e8b51d83281782d8ae17276e6435dbb598c05f8fe3b49d856f824bc3ad-7ee5665d832b2c6928b7210abca16e44e11024c038330c61b6ef20eae619bb5a.delta  7365677bd81172ca5309263118ae0ca51861d9f80a1636643a2f901d75e15ec1-441d497762404f807d0a335724f47fce01ae096dbe35953b3e502634784aaecd.delta  7365677bd81172ca5309263118ae0ca51861d9f80a1636643a2f901d75e15ec1-7185ed1fdc74f95e3d8731609c50eab93ed4b73cfbf34db8434903c78df1524f.delta  784a29af485fc7dc7da87381bdd82e36612943f36ca145b23db6342e8e8540fb-027f3ee888d2f5e93892df8b07bae4a87744fc56800619d22e60b8e85d8a09e3.delta  784a29af485fc7dc7da87381bdd82e36612943f36ca145b23db6342e8e8540fb-441d497762404f807d0a335724f47fce01ae096dbe35953b3e502634784aaecd.delta  784a29af485fc7dc7da87381bdd82e36612943f36ca145b23db6342e8e8540fb-7185ed1fdc74f95e3d8731609c50eab93ed4b73cfbf34db8434903c78df1524f.delta  784a29af485fc7dc7da87381bdd82e36612943f36ca145b23db6342e8e8540fb-7ee5665d832b2c6928b7210abca16e44e11024c038330c61b6ef20eae619bb5a.delta  784a29af485fc7dc7da87381bdd82e36612943f36ca145b23db6342e8e8540fb-a53459b5ab45d677d53048669db0f066cecd0dca473ee216917fb75bfc8b33e1.delta  93c5bb36b43a7e2be363a9e6dc2246f9e5e259a7e5b77ac00b229f3f715bc548-7ee5665d832b2c6928b7210abca16e44e11024c038330c61b6ef20eae619bb5a.delta  9b8665bc2fd7932169da5c24cc9c203c37c32e6e06cf49eb3eb9e6ebf7ce9f1a-027f3ee888d2f5e93892df8b07bae4a87744fc56800619d22e60b8e85d8a09e3.delta  a53459b5ab45d677d53048669db0f066cecd0dca473ee216917fb75bfc8b33e1-027f3ee888d2f5e93892df8b07bae4a87744fc56800619d22e60b8e85d8a09e3.delta  a53459b5ab45d677d53048669db0f066cecd0dca473ee216917fb75bfc8b33e1-7185ed1fdc74f95e3d8731609c50eab93ed4b73cfbf34db8434903c78df1524f.delta  a53459b5ab45d677d53048669db0f066cecd0dca473ee216917fb75bfc8b33e1-7ee5665d832b2c6928b7210abca16e44e11024c038330c61b6ef20eae619bb5a.delta  ada0bf4b54282d6ef594d506e1a97c58856215911c1bd58db67b2e63b22e0c58-441d497762404f807d0a335724f47fce01ae096dbe35953b3e502634784aaecd.delta  e68a7405d7fca7205b891d0837b40cdee58781c59d73a1038afcd5c063654d8c-027f3ee888d2f5e93892df8b07bae4a87744fc56800619d22e60b8e85d8a09e3.delta  e68a7405d7fca7205b891d0837b40cdee58781c59d73a1038afcd5c063654d8c-441d497762404f807d0a335724f47fce01ae096dbe35953b3e502634784aaecd.delta  e68a7405d7fca7205b891d0837b40cdee58781c59d73a1038afcd5c063654d8c-7185ed1fdc74f95e3d8731609c50eab93ed4b73cfbf34db8434903c78df1524f.delta  e68a7405d7fca7205b891d0837b40cdee58781c59d73a1038afcd5c063654d8c-7ee5665d832b2c6928b7210abca16e44e11024c038330c61b6ef20eae619bb5a.delta
packaging/: build_exe.py  build_nuitka.py
packaging/flatpak/: com.github.ratrad.Pypify.desktop  com.github.ratrad.Pypify.metainfo.xml  com.github.ratrad.Pypify.yml  pypify.sh
packaging/flatpak/pypify-repo/: summary  summary.idx
packaging/flatpak/pypify-repo/refs/heads/app/com.github.ratrad.Pypify/x86_64/: master
packaging/flatpak/pypify-repo/refs/heads/appstream/: x86_64
packaging/flatpak/pypify-repo/refs/heads/appstream2/: x86_64
packaging/flatpak/pypify-repo/refs/heads/runtime/com.github.ratrad.Pypify.Debug/x86_64/: master
packaging/flatpak/pypify-repo/summaries/: a17777ef29fca583bf4f4853f9c4dec2abd6e037d878d8655fb45da3d4fc3c8d-0b7462782f104e7dae4833406f0f713cdf99e1f09971c98dba0e1ce354624b05.delta
src/: cpify_app.c  main.c  media_scanner.c  media_scanner.h  meson.build  player.c  player.h  pypify_app.c  pypify_app.h  settings.c  settings.h  sound_effects.h  splash_screen.c  splash_screen.h  updater.h
